# Sonic-CD-11-Decompilation

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindTheora.cmake
